# Omoikane

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  README.en.md  README.md  config.yaml  config_example.yaml
src/: cli_args.rs  dns.rs  fingerprint.rs  http.rs  macros.rs  main.rs  network_manager.rs  proxy.rs  rand.rs  settings.rs  tls.rs
src/adapter/output/: mod.rs  proxy_linux.rs  proxy_macos.rs  proxy_windows.rs
src/application/: mod.rs
src/application/port/output/: mod.rs  proxy_manager.rs
