[package]
name = "omoikane"
version = "0.1.0"
authors = ["Artem Sergeev"]
license = "Apache-2.0"
edition = "2024"
publish = false

[dependencies]
log = "0.4.29"
rand = "0.10.0"
futures = "0.3"
colored = "3.1.1"
socket2 = "0.6.3"
anyhow = "1.0.102"
httparse = "1.10.1"
thiserror = "2.0.18"
tls-parser = "0.12.2"
env_logger = "0.11.10"
text-to-ascii-art = "0.1.10"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
hickory-resolver = { version = "0.24.4", features = [
    "tokio-runtime",
    "dns-over-rustls",
    "dns-over-https-rustls",
    "webpki-roots",
] }
