[package]
name = "omoikane"
version = "1.2.0"
authors = ["Artem Sergeev"]
license = "Apache-2.0"
edition = "2024"
publish = false

[dependencies]
log = "0.4.29"
config = "0.15.22"
anyhow = "1.0.102"
httparse = "1.10.1"
thiserror = "2.0.18"
tls-parser = "0.12.2"
serde_json = "1.0.149"
env_logger = "0.11.10"
text-to-ascii-art = "0.1.10"
clap = { version = "4.6.0", features = ["derive"] }
colored = { version = "3.1.1", default-features = false }
socket2 = { version = "0.6.3", default-features = false }
tokio-util = { version = "0.7.18", default-features = false }
futures-util = { version = "0.3.32", default-features = false, features = [
    "alloc",
] }
tokio = { version = "1.51.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
serde = { version = "1.0.228", features = ["derive"] }
hickory-resolver = { version = "0.24.4", features = [
    "tokio-runtime",
    "dns-over-rustls",
    "dns-over-https-rustls",
    "webpki-roots",
] }

[profile.release-lto]
inherits = "release"
codegen-units = 1
opt-level = "s"
strip = true
lto = true
